@@ -1,5 +1,7 @@
 Changelog for Collections.
 
+- Fixed checking for Tagger
+
 Collections 1.3.1
 ===================
 - Release with correct version number
